[tool.poetry]
name = "biscutbox"
version = "0.1.0"
description = "A cookie jar implementation that is backed by a sqlite database"
authors = ["Mark Grandi <markgrandi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attr = "^0.3.2"
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.43.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
